--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
 <body>
     <h1>Learning git</h1>
+    <ul class="container">
+        <li class="container__element"></li>
+        <li class="container__element"></li>
+        <li class="container__element"></li>
+        <li class="container__element"></li>
+        <li class="container__element"></li>
+        <li class="container__element"></li>
+        <li class="container__element"></li>
+        <li class="container__element"></li>
+    </ul>
 </body>
 
 </html>
